--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy>=1.16.4,<1.19.0
+numpy>=1.16.4
 jax>=0.2.6
 jaxlib>=0.1.57
 flax>=0.2.2
@@ -8,3 +8,6 @@ pyyaml>=5.3.1
 tensorboard>=2.4.0
 tensorflow>=2.3.1
 tensorflow-hub>=0.11.0
+transformers==4.8.2
+wandb==0.10.33
+# pip install git+https://github.com/deepmind/jmp  # mixed precision for JAX
